Update playbooks and configurations for improved management and consistency
- Added inventory.yml to .gitignore
- Updated GRUB configuration tasks in standup.yml for better checks
- Changed timeout to wait_timeout in multiple teardown playbooks for consistency
- Updated default data path in Longhorn setup
- Enhanced ansible user setup with specific user and SSH key settings
- Added no_log option to kubectl command in stack teardown for security

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore secrets directory
 /secrets/
 
+/inventory.yml
+
 # Common ignore patterns
 *.swp
 *~
@@ -12,3 +14,4 @@ playbooks/10-keycloak/generated/
 
 __pycache__/
 *.pyc
+
