--- a/playbooks/03-metallb/teardown.yml
+++ b/playbooks/03-metallb/teardown.yml
@@ -29,7 +29,7 @@
       name: "{{ metallb_namespace }}"
       state: absent
       wait: true
-      timeout: "300s"
+      wait_timeout: 300
 
   - name: Remove MetalLB CRDs
     ansible.builtin.shell: |
