--- a/playbooks/06-externaldns/teardown.yml
+++ b/playbooks/06-externaldns/teardown.yml
@@ -29,4 +29,4 @@
         kind: Namespace
         name: "{{ externaldns_namespace }}"
         wait: true
-        timeout: "300s"
+        wait_timeout: 300
