--- a/playbooks/05-certmanager/charts/h3xinfra-certmanager-post/templates/cloudflare-clusterissuer.yaml
+++ b/playbooks/05-certmanager/charts/h3xinfra-certmanager-post/templates/cloudflare-clusterissuer.yaml
@@ -21,7 +21,8 @@ spec:
             name: {{ include "h3xinfra-certmanager-post.fullname" . }}-cloudflare-api-token
             key: api-token
       selector:
-        dnsZones: {{ with .Values.clusterIssuer.acme.dnsZones }}
+        dnsZones:
+        {{- with .Values.clusterIssuer.acme.dnsZones }}
           {{- toYaml . | nindent 8 }}
           {{- else }}
           {{ fail "No DNS zones specified for ClusterIssuer" }}
