--- a/playbooks/09-mailu/charts/h3xinfra-mailu-pre/templates/certificate.yaml
+++ b/playbooks/09-mailu/charts/h3xinfra-mailu-pre/templates/certificate.yaml
@@ -14,7 +14,7 @@ spec:
     name: {{ .Values.clusterIssuerName }}
     kind: ClusterIssuer
   commonName: {{ .Values.certificate.commonName }}
-  {{ with .Values.certificate.dnsNames }}
+  {{- with .Values.certificate.dnsNames }}
   dnsNames:
-    {{ . | toYaml | nindent 4 }}
+    {{- . | toYaml | nindent 4 }}
   {{- end }}
