Remove Mailu and Keycloak Helm charts and associated resources
- Deleted Mailu Helm chart and all related templates, values, and playbooks.
- Deleted Keycloak Helm chart and all related templates, values, and playbooks.
- Updated stack-standup.yml to comment out Mailu and Keycloak standup playbooks.
- Added setup scripts for dependencies, permissions, and SSH configuration.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,6 +34,7 @@
 	// "customizations": {},
 	"containerEnv": {
 		"WORKSPACE_FOLDER": "${containerWorkspaceFolder}",
+		"H3XINFRA_FOLDER": "${containerWorkspaceFolder}",
 		"ANSIBLE_CONFIG": "${containerWorkspaceFolder}/ansible.cfg",
 	},
 	"remoteEnv": {
