--- a/playbooks/03-metallb/standup.yml
+++ b/playbooks/03-metallb/standup.yml
@@ -15,16 +15,16 @@
     kubernetes.core.k8s:
       api_version: v1
       kind: Namespace
-      name: "{{ metallb_namespace }}"
+      name: "{{ metallb.namespace }}"
       state: present
       wait: true
 
   - name: Deploy MetalLB via Helm
     kubernetes.core.helm:
-      name: "{{ metallb_release_name_prefix }}-main"
+      name: "{{ metallb.release_name_prefix }}-main"
       chart_ref: "metallb/metallb"
-      chart_version: "{{ metallb_chart_version }}"
-      namespace: "{{ metallb_namespace }}"
+      chart_version: "{{ metallb.chart_version }}"
+      namespace: "{{ metallb.namespace }}"
       create_namespace: false
       values_files: 
       - "{{ playbook_dir }}/metallb-values.yaml"
@@ -34,16 +34,16 @@
 
   - name: Deploy MetalLB configuration via Helm chart
     kubernetes.core.helm:
-      name: "{{ metallb_release_name_prefix }}-post"
+      name: "{{ metallb.release_name_prefix }}-post"
       chart_ref: "{{ playbook_dir }}/charts/h3xinfra-metallb-post"
-      namespace: "{{ metallb_namespace }}"
+      namespace: "{{ metallb.namespace }}"
       create_namespace: false
       values:
-        fullnameOverride: "{{ metallb_release_name_prefix }}-post"
+        fullnameOverride: "{{ metallb.release_name_prefix }}-post"
       set_values:
-      - value: "ipPool.ipAddressPools.addresses.ipv4={{ metallb_loadbalancer_pools.ipv4 }}"
+      - value: "ipPool.ipAddressPools.addresses.ipv4={{ metallb.loadbalancer_pools.ipv4 }}"
         value_type: string
-      - value: "ipPool.ipAddressPools.addresses.ipv6={{ metallb_loadbalancer_pools.ipv6 }}"
+      - value: "ipPool.ipAddressPools.addresses.ipv6={{ metallb.loadbalancer_pools.ipv6 }}"
         value_type: string
       state: present
       wait: true
