--- a/playbooks/06-externaldns/standup.yml
+++ b/playbooks/06-externaldns/standup.yml
@@ -16,18 +16,18 @@
       kubernetes.core.k8s:
         api_version: v1
         kind: Namespace
-        name: "{{ externaldns_namespace }}"
+        name: "{{ externaldns.namespace }}"
         state: present
         wait: true
 
     - name: Deploy ExternalDNS configuration via Helm chart
       kubernetes.core.helm:
-        name: "{{ externaldns_release_name_prefix }}-pre"
+        name: "{{ externaldns.release_name_prefix }}-pre"
         chart_ref: "{{ playbook_dir }}/charts/h3xinfra-externaldns-pre"
-        namespace: "{{ externaldns_namespace }}"
+        namespace: "{{ externaldns.namespace }}"
         create_namespace: false
         values:
-          fullnameOverride: "{{ externaldns_release_name_prefix }}-pre"
+          fullnameOverride: "{{ externaldns.release_name_prefix }}-pre"
           cloudflareApiToken:
             token: "{{ cloudflare_api_token }}"
         state: present
@@ -36,10 +36,10 @@
     
     - name: Deploy ExternalDNS via Helm
       kubernetes.core.helm:
-        name: "{{ externaldns_release_name_prefix }}-main"
+        name: "{{ externaldns.release_name_prefix }}-main"
         chart_ref: "external-dns/external-dns"
-        chart_version: "{{ externaldns_chart_version }}"
-        namespace: "{{ externaldns_namespace }}"
+        chart_version: "{{ externaldns.chart_version }}"
+        namespace: "{{ externaldns.namespace }}"
         create_namespace: false
         values: 
           provider:
@@ -48,7 +48,7 @@
           - name: CF_API_TOKEN
             valueFrom:
               secretKeyRef:
-                name: "{{ externaldns_release_name_prefix }}-pre-cloudflare-api-token"
+                name: "{{ externaldns.release_name_prefix }}-pre-cloudflare-api-token"
                 key: api-token
           labelFilter: external-dns.alpha.kubernetes.io/publish=true
           policy: sync
@@ -56,7 +56,7 @@
           - ingress
           - service
         set_values:
-        - value: "domainFilters={{ externaldns_domain_filters | to_json }}"
+        - value: "domainFilters={{ externaldns.domain_filters | to_json }}"
           value_type: json
         state: present
         wait: true
