--- a/playbooks/06-externaldns/teardown.yml
+++ b/playbooks/06-externaldns/teardown.yml
@@ -8,16 +8,16 @@
   tasks:
     - name: Uninstall ExternalDNS via Helm
       kubernetes.core.helm:
-        name: "{{ externaldns_release_name_prefix }}-main"
-        namespace: "{{ externaldns_namespace }}"
+        name: "{{ externaldns.release_name_prefix }}-main"
+        namespace: "{{ externaldns.namespace }}"
         state: absent
         wait: true
         timeout: "300s"
         
     - name: Uninstall ExternalDNS configuration via Helm
       kubernetes.core.helm:
-        name: "{{ externaldns_release_name_prefix }}-pre"
-        namespace: "{{ externaldns_namespace }}"
+        name: "{{ externaldns.release_name_prefix }}-pre"
+        namespace: "{{ externaldns.namespace }}"
         state: absent
         wait: true
         timeout: "300s"
@@ -27,6 +27,6 @@
         state: absent
         api_version: v1
         kind: Namespace
-        name: "{{ externaldns_namespace }}"
+        name: "{{ externaldns.namespace }}"
         wait: true
         wait_timeout: 300
