--- a/playbooks/07-ingressnginx/standup.yml
+++ b/playbooks/07-ingressnginx/standup.yml
@@ -16,29 +16,29 @@
       kubernetes.core.k8s:
         api_version: v1
         kind: Namespace
-        name: "{{ ingressnginx_namespace }}"
+        name: "{{ ingressnginx.namespace }}"
         state: present
         wait: true
 
     - name: Deploy Ingress-Nginx configuration via Helm
       kubernetes.core.helm:
-        name: "{{ ingressnginx_release_name_prefix }}-pre"
+        name: "{{ ingressnginx.release_name_prefix }}-pre"
         chart_ref: "{{ playbook_dir }}/charts/h3xinfra-ingressnginx-pre"
-        namespace: "{{ ingressnginx_namespace }}"
+        namespace: "{{ ingressnginx.namespace }}"
         create_namespace: false
         values:
-          fullnameOverride: "{{ ingressnginx_release_name_prefix }}-pre"
+          fullnameOverride: "{{ ingressnginx.release_name_prefix }}-pre"
           wildcardCertificate:
-            commonName: "{{ ingressnginx_dns_names | first }}"
-          clusterIssuerName: "{{ certmanager_release_name_prefix }}-post-default-clusterissuer"
+            commonName: "{{ ingressnginx.dns_names | first }}"
+          clusterIssuerName: "{{ certmanager.release_name_prefix }}-post-default-clusterissuer"
           ipPool:
-            namespace: "{{ metallb_namespace }}"
+            namespace: "{{ metallb.namespace }}"
             ipAddressPools:
               addresses:
-                ipv4: "{{ ingressnginx_loadbalancer_pools.ipv4 }}"
-                ipv6: "{{ ingressnginx_loadbalancer_pools.ipv6 }}"
+                ipv4: "{{ ingressnginx.loadbalancer_pools.ipv4 }}"
+                ipv6: "{{ ingressnginx.loadbalancer_pools.ipv6 }}"
         set_values:
-        - value: "wildcardCertificate.dnsNames={{ ingressnginx_dns_names | to_json }}"
+        - value: "wildcardCertificate.dnsNames={{ ingressnginx.dns_names | to_json }}"
           value_type: json
         state: present
         wait: true
@@ -46,10 +46,10 @@
 
     - name: Deploy Ingress-Nginx via Helm
       kubernetes.core.helm:
-        name: "{{ ingressnginx_release_name_prefix }}-main"
+        name: "{{ ingressnginx.release_name_prefix }}-main"
         chart_ref: "ingress-nginx/ingress-nginx"
-        chart_version: "{{ ingressnginx_chart_version }}"
-        namespace: "{{ ingressnginx_namespace }}"
+        chart_version: "{{ ingressnginx.chart_version }}"
+        namespace: "{{ ingressnginx.namespace }}"
         create_namespace: false
         values: 
           controller:
@@ -59,9 +59,9 @@
                 - IPv6
               ipFamilyPolicy: PreferDualStack
               annotations:
-                metallb.universe.tf/address-pool: "{{ ingressnginx_release_name_prefix }}-pre-pool"
+                metallb.universe.tf/address-pool: "{{ ingressnginx.release_name_prefix }}-pre-pool"
             extraArgs:
-              default-ssl-certificate: "{{ingressnginx_namespace}}/{{ ingressnginx_release_name_prefix }}-pre-wildcard-certificate"
+              default-ssl-certificate: "{{ ingressnginx.namespace }}/{{ ingressnginx.release_name_prefix }}-pre-wildcard-certificate"
 
         state: present
         wait: true
