Add SMB CSI Driver Helm deployment and teardown playbooks

--- a/playbooks/07-ingressnginx/standup.yml
+++ b/playbooks/07-ingressnginx/standup.yml
@@ -62,6 +62,9 @@
                 metallb.universe.tf/address-pool: "{{ ingressnginx.release_name_prefix }}-pre-pool"
             extraArgs:
               default-ssl-certificate: "{{ ingressnginx.namespace }}/{{ ingressnginx.release_name_prefix }}-pre-wildcard-certificate"
+            config:
+              annotations-risk-level: "Critical"
+            allowSnippetAnnotations: true
 
         state: present
         wait: true
