Add and configure Helm charts for Longhorn, Mailu, and Authentik deployments
- Created teardown and standup playbooks for Longhorn, including pre and post configurations.
- Added Helm charts for Longhorn with custom resources and configurations.
- Introduced Mailu deployment with Helm, including IP pools and certificate management.
- Implemented Authentik deployment via Helm with PostgreSQL and Redis configurations.
- Updated stack-standup and stack-teardown playbooks to include new services.
- Added helper templates and values files for each new Helm chart.
- Ensured proper namespace management and resource cleanup in teardown playbooks.

--- a/inventory.example.yml
+++ b/inventory.example.yml
@@ -179,19 +179,20 @@ all:
       basic_auth_secret: "admin:$apr1$example$hashgoeshere/"
       ingress_host: "longhorn.app.example.com"
     
-    keycloak:
-      release_name_prefix: "homeinfra-keycloak"
-      namespace: keycloak
-      
-      admin_username: admin
-      admin_password: !vault |
+    authentik:
+      release_name_prefix: "h3xinfra-authentik"
+      namespace: authentik
+
+      secret_key: !vault |
         $ANSIBLE_VAULT;1.1;AES256
-        changeme_please_encrypt_your_actual_keycloak_admin_password_with_ansible_vault
-      db_username: keycloak
+        changeme
       db_password: !vault |
         $ANSIBLE_VAULT;1.1;AES256
-        changeme_please_encrypt_your_actual_keycloak_db_password_with_ansible_vault
-      ingress_hostname: "identity.app.example.com"
+        changeme
+      redis_password: !vault |
+        $ANSIBLE_VAULT;1.1;AES256
+        changeme
+      ingress_hostname: "auth.app.example.com"
 
 
 k3s_cluster:
