--- a/playbooks/stack-standup.yml
+++ b/playbooks/stack-standup.yml
@@ -21,13 +21,13 @@
 
 - import_playbook: 07-ingressnginx/standup.yml
 
-- import_playbook: 08-longhorn/standup.yml
+- import_playbook: 08-smb/standup.yml
 
-- import_playbook: 09-smb/standup.yml
+- import_playbook: 09-longhorn/standup.yml
 
-# - import_playbook: 09-mailu/standup.yml
+- import_playbook: 10-mailu/standup.yml
 
-# - import_playbook: 10-keycloak/standup.yml
+- import_playbook: 11-authentik/standup.yml
 
 # Display cluster status
 - import_playbook: 99-utils/cluster-status.yml
